[package]
name = "nannou-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18"

[[example]]
name = "basic_app"
path = "basic_app/basic_app.rs"

[[example]]
name = "draw_sketch"
path = "draw_sketch/draw_sketch.rs"
